# agentsmith

./: .gitignore  Cargo.toml  README.md  generate-models.sh
.scripts/: anthropic.http  anthropic.tools.http  cerebras.http  cerebras.tools.http  groq.http  groq.tools.http  openai.http  openai.tools.http
MOCK/: docker-compose.yml
MOCK/mockserver/: initializer.json
agentsmith-agent/: Cargo.toml
agentsmith-agent/proto/: agent.proto
agentsmith-agent/resources/: openai.yaml
agentsmith-agent/resources/mockserver/: initializer.json
agentsmith-agent/src/: lib.rs  main.rs
agentsmith-agent/src/agent/: agent.rs  agent_factory.rs  mod.rs  simple_agent.rs  software_architect_agent.rs  software_engineer_agent.rs  software_orchestrator_agent.rs  software_project.rs  software_qa_agent.rs  software_reviewer_agent.rs  software_writer_agent.rs
agentsmith-agent/src/llm/: anthropic_llm.rs  cerebras_llm.rs  gcp_gemini_llm.rs  groq_llm.rs  huggingface_tgi_llm.rs  llamafile_llm.rs  llm.rs  llm_factory.rs  mod.rs  openai_llm.rs  prompt.rs
agentsmith-common/: Cargo.toml
agentsmith-common/src/: lib.rs
agentsmith-common/src/config/: config.rs
agentsmith-common/src/error/: error.rs
agentsmith-eval/: Cargo.toml  README.md
agentsmith-interface/: Cargo.toml
agentsmith-orchestrator/: Cargo.toml
agentsmith-prompt/: Cargo.toml
agentsmith-prompt/src/prompts/software_orchestrator/: initial.prompt.jinja  system.prompt.jinja
agentsmith-prompt/src/repository/: mod.rs
agentsmith-toolbox/: Cargo.toml
documentation/: index.md
