[package]
name = "agentsmith-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22.3", features = ["extension-module"] }
agentsmith-common = { path = "../agentsmith-common"}
base64 = "0.22.1"
cloudevents-sdk = "0.7.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
redis = {  version = "0.27", features = ["tokio-comp", "json", "connection-manager", "streams"] }
r2d2 = "0.8"
r2d2_redis = "0.14"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
metrics = "0.23"
chrono = "0.4.38"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.22"

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1"
